<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nusim</name>
  <version>0.1.2</version>
  <description>Simulator for nuturtlebot</description>
  <maintainer email="ananyaagarwak2024@u.northwestern.edu">Ananya Agarwal</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ros2launch</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>nuturle_description</exec_depend>
  <exec_depend>nuturtlebot_msgs</exec_depend>
  <exec_depend>turtlelib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>