<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_description</name>
  <version>0.1.1</version>
  <description>Contains URDF files for the turtlebot</description>
  <maintainer email="ananyaagarwak2024@u.northwestern.edu">Ananya Agarwal</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ros2launch</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
